--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ oauthlib==3.2.2
 paramiko==3.5.0
 pycparser==2.22
 PyNaCl==1.5.0
+python-dotenv==1.0.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 SQLAlchemy==2.0.36
